syntax = "proto3";
package space.mjadev.accountor.bookings.api;

message Account {
  int64 accountId = 1;
  string userId = 2;
  string name = 3;
  string description = 4;
  repeated Booking bookings = 5;
}

message Booking {
  int64 bookingId = 1;
  string name = 2;
  double amount = 3;
  string currency = 4;
  string description = 5;
}

message AccountRequest {}

service AccountHandler {

  rpc GetAccount (AccountRequest) returns (stream Account);
}